--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.13",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/preact": "^3.5.3",
+    "@astrojs/react": "^3.6.2",
+    "@storyblok/astro": "^5.0.2",
+    "@storyblok/js": "^3.1.7",
+    "astro": "^4.16.13",
+    "lucide-react": "^0.460.0",
+    "preact": "^10.24.3",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-basic-ssl": "^1.1.0"
   }
 }
