--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/netlify": "^5.5.4",
     "@astrojs/preact": "^3.5.3",
     "@astrojs/react": "^3.6.2",
     "@contentful/rich-text-html-renderer": "^17.0.0",
