Set up storkblok for blog entries

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@react-spring/web": "^10.0.1",
     "@react-three/drei": "^9.89.2",
     "@react-three/fiber": "^8.13.5",
+    "@storyblok/astro": "^7.2.1",
+    "@storyblok/react": "^5.4.1",
     "astro": "^4.16.13",
     "contentful": "^11.2.3",
     "dotenv": "^16.4.5",
@@ -27,6 +29,7 @@
     "preact": "^10.24.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "storyblok-js-client": "^7.1.1",
     "three": "^0.153.0"
   },
   "devDependencies": {
